# containerd-wasm-shims

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
.github/worklows/: release.yml
containerd-shim-aspdotnet-v1/: Cargo.toml
containerd-shim-aspdotnet-v1/src/: main.rs
containerd-shim-cehostshim-v1/: Cargo.toml
containerd-shim-cehostshim-v1/src/: main.rs  wasi-ce.wit
containerd-shim-sat-v1/: Cargo.toml
containerd-shim-sat-v1/src/: main.rs
containerd-shim-spin-v1/: Cargo.toml
containerd-shim-spin-v1/src/: main.rs  tmp.rs
crates/aspnet/: Dockerfile
crates/image-cpp/: Makefile  ctest.wasm
crates/image-cpp/bindings/: wasi-ce.c
crates/image-rs/: Cargo.toml
docs/: getting-started-spin.md
images/aspnet/: Dockerfile
images/image-cpp/: Dockerfile  lib.cpp
images/image-cpp/bindings/: wasi-ce.h
images/image-rs/: Dockerfile
images/image-rs/src/: lib.rs
images/sat-hello/: .runnable.yaml  Cargo.toml  Dockerfile  wasm
images/spin/: spin.toml  spinhelloworld.wasm
images/spin-kitchensink/: Dockerfile
src/: main.rs
src/containerd-shim-aspdotnet-v1/: main.rs
src/containerd-shim-cehostshim-v1/: main.rs
src/containerd-shim-spin-v1/: main.rs
test/out_cpp/: img.tar
test/out_rs/: img.tar
test/out_spin/: img.tar
