[package]
name = "containerd-shim-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-shim-wasmtime-v1 = { git="https://github.com/Mossaka/runwasi", branch="jiazho/opt" }
wit-bindgen-wasmtime        = { git = "https://github.com/bytecodealliance/wit-bindgen", branch = "main" }
cloudevents-sdk  = { default-features = false, git = "https://github.com/Mossaka/sdk-rust.git", branch = "master" }
url = "2.2.2"
rouille = "3.5.0"
uuid = "0.8.2"
anyhow = "1.0"
chrono = "0.4.19"
log = "0.4"
wasmtime = "^0.35"
wasmtime-wasi = "^0.35"
serde_json = "1.0"
containerd-shim = "0.3.0"

[[bin]]
name = "containerd-shim-aspdotnet-v1"
path = "src/containerd-shim-aspdotnet-v1/main.rs"

[[bin]]
name = "containerd-shim-cehostshim-v1"
path = "src/containerd-shim-cehostshim-v1/main.rs"