
[package]
name = "containerd-shim-wasmtime-demo"
version = "0.1.0"
edition = "2021"

[lib]
    crate-type = [ "cdylib" ]

[dependencies]
    anyhow           = "1.0"
    wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", branch = "main" }
    url = "2.2.2"
    serde = "1"
    serde_json = "1.0"
    cloudevents-sdk  = { default-features = false, git = "https://github.com/Mossaka/sdk-rust.git", branch = "master" }

[workspace]